src/content/docs/en/sdk/unity/v5/index.mdx
---
title: Unity SDK integration guide
description: Use the Unity SDK to access Adjust's features in your Unity apps
category-title: Unity SDK
slug: en/sdk/unity
sidebar-position: 3
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/unity/v4
---

The Adjust Unity SDK enables you to record attribution, events, and more in your Unity app. Follow the steps in this guide to set up your app to work with the Adjust SDK.

<Callout type="note">

The Adjust SDK supports iOS 12 or later and Android API level 21 (Lollipop) or later.

</Callout>

## 1. Get the Adjust SDK {#get-the-adjust-sdk}

To install the Adjust SDK, choose one of the following methods.

### Install the Unity package {#install-unity-package}

To use the Adjust SDK in your Unity app, you need to add it to your project. You can download the latest version from the [GitHub releases page](https://github.com/adjust/adjust_unity_sdk/releases/latest).

To import the Adjust SDK into your Unity project:

1. Open the Unity Editor.
2. Select **Assets --> Import Package --> Custom Package**.
3. Select the downloaded SDK package.

### Use the Unity Package Manager {#use-the-unity-package-manager}

To install the Adjust SDK with the Unity Package Manager, follow these steps:

1. Select the **Package Manager** window in the Unity editor.
2. Select **Add package from git URL**.
3. Enter the following URL: `https://github.com/adjust/unity_sdk.git?path=Assets/Adjust`.

## 2. Install the iOS and Android SDKs {#install-ios-and-android-sdks}

SDK v5 no longer uses the iOS and Android SDKs as binary dependencies. To install the underlying iOS and Android SDKs, you need to use the [External Dependency Manager for Unity (EDM4U)](https://github.com/googlesamples/unity-jar-resolver) to install the packages from CocoaPods and Maven.

To ensure that the Privacy Manifest and frameworks are loaded correctly for iOS, you need to disable static linking. To do this:

1. Select **Assets -> External Dependency Manager -> iOS Resolver -> Settings**.
2. Find the **Link frameworks statically** option and uncheck it.

![A screenshot of the resolver settings menu](@images/unity/link-frameworks-statically.png)

## 3. Integrate the SDK {#integrate-the-sdk}

The Adjust SDK contains a Unity [prefab](https://docs.unity3d.com/Manual/Prefabs.html) that includes a template game object and an Adjust script. You can use this script to configure the SDK. To open the prefab in the Unity editor:

1. Add the prefab from `Assets/Adjust/Adjust.prefab` to your first scene.
2. Open the prefab Inspector Menu.
3. The prefab menu contains editable fields that control the behavior of the Adjust SDK.

![A screenshot of the Adjust SDK prefab configuration script in the Unity editor.](@images/unity/1-prefab.png)

To set up the Adjust SDK, enter the following information:

1. Your **App Token**. See App settings for instructions on how to find your token.
2. Your **Environment**:
   -  Choose **Sandbox** if you are testing your app and want to send test data. You need to enable sandbox mode in the dashboard to see test data.
   -  Choose **Production** when you have finished testing and are ready to release your app.
3. Your **Log Level**. This controls what logs you receive. See [Set log level](/en/sdk/unity/configuration#set-your-logging-level) for more information.

The Adjust SDK starts when the app's Awake event triggers by default. To override this behavior, check the **START SDK MANUALLY** option. This enables you to initialize the Adjust SDK by calling `Adjust.InitSdk` with your config instance as an argument.

```cs
AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox);
Adjust.InitSdk(adjustConfig);
// ...
```

## 4. Set up Android devices {#set-up-android-devices}

### Add Google Play Services {#add-google-play-services}

Apps that target the Google Play Store must use the gps_adid (Google Advertising ID) to identify devices. You need to add the `play-services-ads-identifier` AAR to your project to access the `gps_adid`.

<Tabs>
<Tab title="EDM4U" sync="edm4u">

If you are using the [External Dependency Manager plugin](https://developers.google.com/unity/archive#external_dependency_manager_for_unity), add the following to your `Dependencies.xml` file:

```xml
<androidPackages>
   <androidPackage spec="com.google.android.gms:play-services-ads-identifier:18.0.1" />
</androidPackages>
```

</Tab>
<Tab title="Manual installation" sync="manual">

To install the ARR (Android Archive) manually, [download it from Maven](https://maven.google.com/web/index.html#com.google.android.gms:play-services-ads-identifier:18.0.1 "A link to the AAR artifact on Maven.") and add it to the `Assets/Plugins/Android` directory.

</Tab>
</Tabs>

### Collect App Set Identifier {#collect-app-set-identifier}

The [App Set Identifier](https://developer.android.com/design-for-safety/privacy-sandbox/reference/adservices/appsetid/AppSetId) is a unique identifier that enables you to measure information from any of your apps that a user has installed on their device. All apps by the same developer share the same App Set ID, meaning you can gather meaningful insights from users across all your apps.

<Tabs>
<Tab title="EDM4U" sync="edm4u">

To record a device's App Set ID, you need to add the following dependency to your `Dependencies.xml` file:

```xml
<androidPackages>
   <androidPackage spec="com.google.android.gms:play-services-appset:16.0.2" />
</androidPackages>
```

</Tab>
<Tab title="Manual installation" sync="manual">

To install the ARR (Android Archive) manually, [download it from Maven](https://maven.google.com/web/index.html#com.google.android.gms:play-services-appset:16.0.2 "A link to the AAR artifact on Maven.") and add it to the `Assets/Plugins/Android` directory.

</Tab>
</Tabs>

### Set up install referrer {#set-up-install-referrer}

The install referrer is a unique identifier which you can use to attribute an app install to a source. The Adjust SDK requires this information to perform attribution. There can gather this information using the [Google Play Referrer API](https://developer.android.com/google/play/installreferrer).

There are 2 ways to add support for the Google Play Referrer API:

<Tabs>
<Tab title="EDM4U" sync="edm4u">

Add the install referrer library as a dependency in a [custom `build.gradle` file](https://docs.unity3d.com/2023.1/Documentation/Manual/android-gradle-overview.html)

```groovy
dependencies {
   implementation 'com.android.installreferrer:installreferrer:2.2'
}
```

</Tab>
<Tab title="Manual installation" sync="manual">

Download the install referrer library from [Maven](https://maven.google.com/web/index.html?q=install#com.android.installreferrer:installreferrer) and put the ARR (Android Archive) file in your `Plugins/Android` folder.

</Tab>
</Tabs>

#### Meta referrer integration {#meta-referrer-integration}

The Adjust SDK supports the [Meta Install Referrer](https://developers.facebook.com/docs/app-ads/meta-install-referrer). To enable this feature:

1. Find your Meta app ID in your [App Dashboard](https://developers.facebook.com/apps). See Meta's [App Dashboard documentation](https://developers.facebook.com/docs/development/create-an-app/app-dashboard) for more information.
2. [Add the Meta apps to your `AndroidManifest.xml` file](https://developers.facebook.com/docs/app-ads/meta-install-referrer#step-1--add-the-meta-apps).

<CodeBlock title="AndroidManifest.xml">

```xml
<queries>
   <package android:name="com.facebook.katana" />
</queries>

<queries>
   <package android:name="com.instagram.android" />
</queries>
```

</CodeBlock>

3. Set the `FbAppId` property on your `AdjustConfig` instance to your app ID.

   ```cs
   AdjustConfig config = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox, true);
   //...
   config.FbAppId = "{FB_APP_ID_STRING}";
   //...
   Adjust.InitSdk(config);
   ```

## 5. Set up SDK Signature {#set-up-sdk-signature}

SDK v5 includes the [SDK signature library](https://help.adjust.com/en/article/sdk-signature). Follow the testing guide for [iOS](/en/sdk/ios/integrations/signature-library#test-your-app) and [Android](/en/sdk/android/integrations/signature-library#test-your-app) to ensure your integration works.

Signature protection is inactive by default. To enable it, you need to:

1. [Enforce signature validation](https://help.adjust.com/en/article/sdk-signature#enforce-signature-validation).
2. [Provide your app's SHA-1 fingerprints](https://help.adjust.com/en/article/sdk-signature#manage-your-certificate-fingerprints) prior to testing.

## 6. Build your app {#build-your-app}

To complete the app build process, the Adjust Unity package performs custom post-build actions to ensure the Adjust SDK works in your app. This process is performed by the `OnPostprocessBuild` method in `AdjustEditor.cs`.

You can configure post-build options to customize your app build.

![A screenshot of the Adjust SDK post-build configuration script in the Unity editor.](@images/unity/2-postbuild.png)

<Tabs>
<Tab title="iOS" icon="PlatformIos">

<Callout type="important">

To run the iOS post-build process, make sure that you have **iOS build support** installed in the Unity Editor.

</Callout>

The iOS post-build process makes the following changes to your generated Xcode project:

-  Enables Objective-C exceptions.

#### Frameworks {#frameworks}

You can enable the following frameworks to access iOS features:

-  `AdServices.framework`: Required for Apple Search Ads measurement
-  `AdSupport.framework`: Required to read the device IDFA
-  `AppTrackingTransparency.framework`: Required to ask for user's consent to be measured and obtain consent status
-  `StoreKit.framework`: Required to communicate with the SKAdNetwork framework.

#### App Tracking Transparency consent dialog {#app-tracking-transparency-consent-dialog}

If you are using the ATT (App Tracking Transparency) wrapper, enter a **User Tracking Description** message. This displays when you present the ATT consent dialog to your user.

#### Deep linking {#deep-linking}

To enable deep linking, add the following information:

-  **iOS Universal Links Domain**: The associated domain used for universal links.
-  **iOS URL Identifier**: Your app's bundle ID.
-  **iOS URL Schemes**: The URL scheme associated with your app.

</Tab>
<Tab title="Android" icon="PlatformAndroid">

The Android post-build process checks for an `AndroidManifest.xml` file in `Assets/Plugins/Android/`. If this file isn't present, it creates a copy from [`AdjustAndroidManifest.xml`](https://github.com/adjust/unity_sdk/blob/master/Assets/Adjust/Native/Android/AdjustAndroidManifest.xml "A link to the AdjustAndroidManifest file on GitHub").

#### Permissions {#permissions}

You can enable the following permissions to access Android features:

-  `android.permission.INTERNET`: Required to connect to the internet.
-  `android.permission.ACCESS_NETWORK_STATE`: Required to read the type of network the device is connected to.
-  `com.android.finsky.permission.BIND_GET_INSTALL_REFERRER_SERVICE` **Deprecated**: Required to fetch install referrer information via Google Play Store intent.
-  `com.google.android.gms.permission.AD_ID`: Required to read the device advertising ID on Android 12 (API level 31) and above. See [Google's `AdvertisingIdClient.info` documentation](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info#public-string-getid) for more information.

#### Deep linking {#deep-linking-1}

To enable deep linking, add the following information:

**Android URI Schemes**: The destination of your deep link.

</Tab>
</Tabs>

The output of the process is shown in the Unity IDE console window.

## 7. Test your integration {#test-your-integration}

<Callout type="tip">

If you encounter any issues, email support@adjust.com with all details and logs.

</Callout>

The Adjust SDK provides tools for testing and troubleshooting issues with your integration. To test your setup:

-  Set your environment to `AdjustEnvironment.Sandbox`.
-  Add a sandbox filter to your Adjust dashboard results.
-  Set your [log level](/en/sdk/unity/configuration#set-your-logging-level) to `AdjustLogLevel.Verbose`.

### Test Google Play Services integration {#test-google-play-services-integration}

To test that the Adjust SDK can receive a device's Google Advertising ID, set the [log level](/en/sdk/unity/configuration#set-your-logging-level) to `AdjustLogLevel.Verbose` and the environment to `AdjustEnvironment.Sandbox`. Start your app and measure a `session` or an event. The SDK logs the gps_adid (Google Play Services Advertiser ID) parameter if it has read the advertising ID.

If you are having issues retrieving the Google Advertising ID, open an issue in the [GitHub repository](https://github.com/adjust/unity_sdk) or contact support@adjust.com.
